--- a/app/views/public/posts/draft.html.erb
+++ b/app/views/public/posts/draft.html.erb
@@ -16,7 +16,7 @@
           <tr class="rough-draft">
             <td class="title"><%= post.title %></td>
             <td class="date"><%= post.updated_at.strftime('%Y/%m/%d') %></td>
-            <td class="edit-btn"><%= link_to "編集", post_path(post.id), class: "btn btn-success"  %></td>
+            <td class="edit-btn"><%= link_to "詳細", post_path(post.id), class: "btn btn-success"  %></td>
           </tr>
         <% end %>
       </tbody>
