--- a/app/views/public/users/confirm.html.erb
+++ b/app/views/public/users/confirm.html.erb
@@ -10,7 +10,8 @@
         <%= link_to "退会しない", edit_user_path(@user), class: "btn btn-success" %>
       </div>
       <div class="col-lg-2">
-        <%= link_to "退会する", users_withdrawal_path, class: "btn btn-danger" %>
+        <%= link_to "退会する", users_withdrawal_path, class: "btn btn-danger",
+          data: {confirm: "退会します。よろしいですか？"} %>
       </div>
     </div>
   </div>
