--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,5 +1,7 @@
- <%= flash[:notice] %>
 <div class="container">
+  <div class='flash-message'>
+    <%= flash[:notice] %>
+  </div>
   <h4>投稿編集</h4>
   <div class="row">
     <%= form_with model: @post, url: post_path(@post), method: :patch do |f| %>
