--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,5 +1,7 @@
-<p><%= flash[:notice] %></p>
 <div class="container">
+  <div class='flash-message'>
+    <%= flash[:notice] %>
+  </div>
   <div class="row">
     <div class="col-lg-10">
       <h2><%= @post.title %></h2>
@@ -76,49 +78,51 @@
       <% end %>
     </div>
   </div>
-    
-  <div class="row">
-    <div class="sub-title">
-      コメントする
+  
+  <% if @post.is_publish == true %>
+    <div class="row">
+      <div class="sub-title">
+        コメントする
+      </div>
+      <div class="col-lg-12 comment-box d-flex justify-content-center">
+        <%= form_with model: [@post, @post_comment] do |f| %>
+          <%= render 'layouts/error_messages', model: f.object %>
+            <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに記述" %>
+          <span class="action d-flex justify-content-center align-items-center">
+            <%= f.submit "送信", class: "btn btn-success" %>
+          </span>
+        <% end %>
+      </div>
     </div>
-    <div class="col-lg-12 comment-box d-flex justify-content-center">
-      <%= form_with model: [@post, @post_comment] do |f| %>
-        <%= render 'layouts/error_messages', model: f.object %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに記述" %>
-        <span class="action d-flex justify-content-center align-items-center">
-          <%= f.submit "送信", class: "btn btn-success" %>
-        </span>
-      <% end %>
+      
+    <div class="row">
+      <div class="row comment-box justify-content-center">
+        <!--<div class="col-lg-12 d-flex justify-content-center align-items-center">-->
+          コメント件数：<%= @post.comments.count %>件
+        <!--</div>-->
+      </div>
+      <div class="col-lg-12 comment-box">
+        <% @post.comments.each do |comment| %>
+          <div class="row comment-list">
+            <div class="col-lg-2">
+              <%= image_tag comment.user.get_profile_image(50,50) %>
+              <%= comment.user.user_name %>
+            </div>
+            <div class="col-lg-6">
+              <%= comment.comment %>
+            </div>
+            <div class="col-lg-2">
+              <%= comment.created_at.strftime('%Y/%m/%d') %>
+            </div>
+            <div class="col-lg-2">
+              <% if comment.user == current_user %>
+                <%= link_to "削除", post_comment_path(comment.id), method: :delete, class: "btn btn-danger",
+                  data: {confirm: "コメントを削除します。よろしいですか？"} %>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
-  </div>
-    
-  <div class="row">
-    <div class="row comment-box justify-content-center">
-      <!--<div class="col-lg-12 d-flex justify-content-center align-items-center">-->
-        コメント件数：<%= @post.comments.count %>件
-      <!--</div>-->
-    </div>
-    <div class="col-lg-12 comment-box">
-      <% @post.comments.each do |comment| %>
-        <div class="row comment-list">
-          <div class="col-lg-2">
-            <%= image_tag comment.user.get_profile_image(50,50) %>
-            <%= comment.user.user_name %>
-          </div>
-          <div class="col-lg-6">
-            <%= comment.comment %>
-          </div>
-          <div class="col-lg-2">
-            <%= comment.created_at.strftime('%Y/%m/%d') %>
-          </div>
-          <div class="col-lg-2">
-            <% if comment.user == current_user %>
-              <%= link_to "削除", post_comment_path(comment.id), method: :delete, class: "btn btn-danger",
-                data: {confirm: "コメントを削除します。よろしいですか？"} %>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
+  <% end %>
 </div>
