--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,31 +1,35 @@
 <div class="container">
+  <div class='flash-message'>
+    <%= flash[:notice] %>
+  </div>
   <%= render "public/shared/error_messages", resource: resource %>
   <div class="row justify-content-center">
-    <%= form_with model: User, url: user_registration_path do |f| %>
-      <div class="col-12 registration-field">
+    <%= form_with model: User, url: user_registration_path, class: "col-lg-5 col-md-10 col-12" do |f| %>
+      <div class="registration-field">
         <%= f.label :email, "メールアドレス" %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input-form" %>
       </div>
-      <div class="col-12 registration-field">
+      <div class="registration-field">
         <%= f.label :password, "パスワード" %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> 文字以上)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
+        <%= f.password_field :password, autocomplete: "new-password", class: "input-form" %>
       </div>
-      <div class="col-12 registration-field">
+      <div class="registration-field">
         <%= f.label :password_confirmation, "パスワードの確認" %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input-form" %>
       </div>
-      <div class="col-12 registration-field d-flex justify-content-center align-items-center">
+      <div class="registration-field d-flex justify-content-center align-items-center">
         <%= f.submit "ユーザ登録", class: "btn btn-success" %>
       </div>
     <% end %>
+    
     <div class="col-12 registration-field d-flex justify-content-center align-items-center">
       すでにユーザ登録をされている方は、こちらからログインください。
     </div>
     <div class="col-12 registration-field d-flex justify-content-center align-items-center">
-   　　<%= link_to "ログインはこちら", new_user_registration_path, class: "btn btn-success"  %>
+   　　<%= link_to "ログインはこちら",new_user_session_path, class: "btn btn-success"  %>
    　  <%#= render "public/shared/links" %>
     </div>
   </div>
