--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,40 +1,41 @@
 <div class="container">
-  <h1>検索結果一覧</h1>
+  <h4>検索結果一覧</h4>
   <div class="row">
     <div class="col-6">
-      <div class="row">
-        <div class="col-12">
-      　  該当ユーザ
-      　</div>
-      　<div class="col-12">
-        　<% if @users.presence %>
-            <% @users.each do |user| %>
-              <div class="col-6">
-                <%= link_to "#{user.user_name}", user_path(user.id) %>
-              </div>
-            <% end %>
-          <% else %>
-            検索条件と一致するユーザは見つかりませんでした。
+      <div class="row sub-title">
+    　  該当ユーザ
+    　</div>
+    　<div class="row">
+      　<% if @users.presence %>
+          <% @users.each do |user| %>
+            <div class="col-12">
+              <%= link_to user.user_name, user_path(user.id) %>
+            </div>
           <% end %>
-        </div>
+        <% else %>
+          <div class="col-12">
+            検索条件と一致するユーザは見つかりませんでした。
+          </div>
+        <% end %>
       </div>
     </div>
+    
     <div class="col-6">
+      <div class="row sub-title">
+        該当の投稿
+      </div>
       <div class="row">
-        <div class="col-12">
-          該当の投稿
-        </div>
-        <div class="col-12">
-          <% if @posts.presence %>
-            <% @posts.each do |post| %>
-              <div class="col-12">
-                <%= link_to post.title, search_path %>  
-              </div>
-            <% end %>
-          <% else %>
-            検索条件と一致する投稿は見つかりませんでした。
+        <% if @posts.presence %>
+          <% @posts.each do |post| %>
+            <div class="col-12">
+              <%= link_to post.title, search_path %>  
+            </div>
           <% end %>
-        </div>
+        <% else %>
+          <div class="col-12">
+            検索条件と一致する投稿は見つかりませんでした。
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
