--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,6 +1,8 @@
-<p><%= flash[:notice] %></p>
 <div class="container">
-  <h4>ユーザ情報</h4>
+  <div class='flash-message'>
+    <%= flash[:notice] %>
+  </div>
+  <h4>ユーザ情報編集</h4>
   <div class="row justify-content-center">
     <%= form_with model: @user, url: user_path  do |f| %>
     <%= render 'layouts/error_messages', model: f.object %>
