--- a/app/views/public/shared/_error_messages.html.erb
+++ b/app/views/public/shared/_error_messages.html.erb
@@ -8,7 +8,7 @@
     </h4>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class="validation-message"><%= message %></li>
       <% end %>
     </ul>
   </div>
