--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -77,7 +77,7 @@
             <%= comment.created_at.strftime('%Y/%m/%d') %>
           </div>
           <div class="col-lg-2">
-            <%= link_to "詳細", admin_comment_path, class: "btn btn-success" %>
+            <%= link_to "詳細", admin_comment_path(comment.id), class: "btn btn-success" %>
           </div>
         </div>
       <% end %>
