--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -64,6 +64,7 @@ h4{
 
 .flash-message{
   background-color: #ffd700;
+  margin-bottom: 2%;
 }
 
 .validation-message{
@@ -89,12 +90,6 @@ h4{
   margin: 10px 0px 10px;
 }
 
-// .registration-form{
-//   width: 100%;
-//   text-align: center;
-// }
-
-// .login-form
 
 // トップページCSS
 
@@ -141,8 +136,6 @@ h4{
   border: solid 0.5px #b0c4de;
   border-radius: 10px;
 }
-
-
 
 // 詳細ページCSS
 
@@ -276,7 +269,6 @@ h4{
 .profile-box{
   width: 90%;
   padding: 1%;
-  
 }
 
 .self-intro{
