--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class='flash-message'>
+    <%= flash[:notice] %>
+  </div>
   <h4>
     管理者 投稿一覧トップページ
     <span class="num-items">全<%= @posts.count %>件</span>
