--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -8,9 +8,6 @@
   </div>
 <% end %>
 <div class="container">
-  <div class='flash-message'>
-    <%= flash[:notice] %>
-  </div>
     <h4>管理者 ユーザ情報編集</h4>
     <div class="row">
       <div class="col-lg-4">
@@ -20,7 +17,7 @@
       </div>
       
       <div class="col-lg-8 user-edit">
-        <%= form_with model: @user, url: admin_user_path(@user), local: true do |f| %>
+        <%= form_with model: @user, url: admin_user_path(@user), local: true, method: :patch do |f| %>
           <table class="table table-bordered table-striped">
             <tr>
               <th>ユーザID</th>
