--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class='flash-message'>
     <%= flash[:notice] %>
+    <%= flash[:alert] %>
   </div>
   <h4>ユーザ情報編集</h4>
   <div class="row justify-content-center">
