--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class='flash-message'>
+    <%= flash[:notice] %>
+  </div>
   <h4>管理者 コメント一覧</h4>
     <table class="table table-bordered table-striped">
       <thead>
