--- a/app/views/public/searches/_search.html.erb
+++ b/app/views/public/searches/_search.html.erb
@@ -1,5 +1,5 @@
 <div class="search_form">
-  <%= form_with url: search_path, local: true do |f| %>
+  <%= form_with url: search_path, local: true, method: :get do |f| %>
     <%= f.text_field :keyword %>
     <%= f.submit "検索" %>
   <% end %>
