--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -5,9 +5,11 @@
   <h4>マイページ</h4>
   <div class="row">
     <div class="col-lg-4">
-      <%= link_to user_path(current_user) do %>
-        <%= image_tag @user.get_profile_image(100,100) %>
-      <% end %>
+      <div class="row mypage-list">
+        <%= link_to user_path(current_user) do %>
+          <%= image_tag @user.get_profile_image(100,100) %>
+        <% end %>
+      </div>
       <div class="row profile-box">
         <div class="col-lg-12">
           ニックネーム
