--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -40,7 +40,10 @@
             <% end %>
           </div>
         <% end %>
-        <%= paginate @posts %>
+        
+    </div>
+    <div class="row justify-content-center">
+      <%= paginate @posts, theme: 'twitter-bootstrap-4' %>
     </div>
 </div>
 
