--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -37,6 +37,8 @@
         <% end %>
       </div>
     <% end %>
-    <%= paginate @posts %>
   </div>
+  <div class="row justify-content-center">
+      <%= paginate @posts, theme: 'twitter-bootstrap-4' %>
+    </div>
 </div>
