--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -38,7 +38,7 @@
       </div>
     <% end %>
   </div>
-  <div class="row justify-content-center">
-    <%= paginate @posts, theme: 'twitter-bootstrap-4' %>
-  </div>
+  <!--<div class="row justify-content-center">-->
+  <!--  <%#= paginate @posts, theme: 'twitter-bootstrap-4' %>-->
+  <!--</div>-->
 </div>
