--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,41 +1,3 @@
 <div class="container">
-  <div class="row">
-    <% @posts.each do |post| %>
-      <div class="col-lg-4 post-box">
-        <%= link_to post_path(post.id) do %>
-          <div class="row">
-            <div class="index-post-img">
-              <%= image_tag post.get_post_image(250,200) %>
-              <div class="like">
-                ♡<%= post.likes.count %>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-12">
-            <div class="post-title">
-              <strong><%= post.title %></strong><br>
-            </div>
-            <div class="user-info">
-              <%= image_tag post.user.get_profile_image(30,30) %>
-              <% if post.user.user_name.present? %>
-                <%= post.user.user_name %>
-              <% else %>
-                未登録
-              <% end %>
-            </div>
-          </div>
-          <div class="col-lg-12 category-area flex-row d-flex flex-wrap">
-            <% post.categories.each do |category| %>
-              <div class=" category category-tag">
-                <%= category.category_name %>
-              </div>
-            <% end %>
-          </div>
-          <div class="col-lg-12">
-            更新日：<%= post.updated_at.strftime("%Y-%m-%d") %>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
+  <h4>テスト</h4>
 </div>
